syntax = "proto3";

option go_package = "sensor";

import "google/protobuf/timestamp.proto";

import "gogoproto/gogo.proto";

package sensor;

// Names and data types are designed to follow proto/storage/node.proto as close as possible
// Next tag: 5
message FullNodeScan {
    string id                                 = 1 [(gogoproto.moretags) = 'search:"Node ID,store" sql:"pk"'];
    string name                               = 2 [(gogoproto.moretags) = 'search:"Node,store"'];
    google.protobuf.Timestamp scan_time       = 3 [(gogoproto.moretags) = 'search:"Node Scan Time,store"'];
    repeated FullNodeScanComponent components = 4 [(gogoproto.moretags) = 'sql:"-"'];
}

message FullNodeScanComponent {
    string name    = 1 [(gogoproto.moretags) = 'search:"Component,store"'];
    string version = 2 [(gogoproto.moretags) = 'search:"Component Version,store"'];
}
